/**
 * Licensed to the Apache Software Foundation (ASF) under one
 * or more contributor license agreements.  See the NOTICE file
 * distributed with this work for additional information
 * regarding copyright ownership.  The ASF licenses this file
 * to you under the Apache License, Version 2.0 (the
 * "License"); you may not use this file except in compliance
 * with the License.  You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package baserpc;

option java_multiple_files = true;
option java_package = "org.apache.bifromq.baserpc.proto";
option java_outer_classname = "RPCServerProtos";
option optimize_for = SPEED;

message RPCServer {
  string id = 1; // the id of the server
  string host = 2;
  uint32 port = 3;
  string gpid = 4; // the global unique process id
  repeated string group = 5; // the set of groups that the server belongs to
  map<string, string> attrs = 6;
  bytes announcerId = 7;
  uint64 announcedTS = 8;
  bytes agentHostId = 9; // the id of the host that the server is running on
}